--- a/api/package.json
+++ b/api/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon index.ts",
+    "start": "nodemon index.ts",
     "install": "node index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
